language/move-lang/tests/move_check/translated_ir_tests/commands/pop_positive.exp
error: 

   ┌── tests/move_check/translated_ir_tests/commands/pop_positive.move:7:9 ───
   │
 7 │         (_, _) = three();
   │         ^^^^^^ Invalid list-assignment. The list-assignment expected 2 argument(s) but got 3
   ·
 2 │     fun three(): (u64, u64, u64) {
   │                  --------------- Found 3 arguments here
   │

